begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.api.protocolrecords.impl.pb
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|GetQueueInfoResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ProtoBase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|QueueInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
operator|.
name|QueueInfoPBImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnProtos
operator|.
name|QueueInfoProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServiceProtos
operator|.
name|GetQueueInfoResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServiceProtos
operator|.
name|GetQueueInfoResponseProtoOrBuilder
import|;
end_import

begin_class
DECL|class|GetQueueInfoResponsePBImpl
specifier|public
class|class
name|GetQueueInfoResponsePBImpl
extends|extends
name|ProtoBase
argument_list|<
name|GetQueueInfoResponseProto
argument_list|>
implements|implements
name|GetQueueInfoResponse
block|{
DECL|field|queueInfo
name|QueueInfo
name|queueInfo
decl_stmt|;
DECL|field|proto
name|GetQueueInfoResponseProto
name|proto
init|=
name|GetQueueInfoResponseProto
operator|.
name|getDefaultInstance
argument_list|()
decl_stmt|;
DECL|field|builder
name|GetQueueInfoResponseProto
operator|.
name|Builder
name|builder
init|=
literal|null
decl_stmt|;
DECL|field|viaProto
name|boolean
name|viaProto
init|=
literal|false
decl_stmt|;
DECL|method|GetQueueInfoResponsePBImpl ()
specifier|public
name|GetQueueInfoResponsePBImpl
parameter_list|()
block|{
name|builder
operator|=
name|GetQueueInfoResponseProto
operator|.
name|newBuilder
argument_list|()
expr_stmt|;
block|}
DECL|method|GetQueueInfoResponsePBImpl (GetQueueInfoResponseProto proto)
specifier|public
name|GetQueueInfoResponsePBImpl
parameter_list|(
name|GetQueueInfoResponseProto
name|proto
parameter_list|)
block|{
name|this
operator|.
name|proto
operator|=
name|proto
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getProto ()
specifier|public
name|GetQueueInfoResponseProto
name|getProto
parameter_list|()
block|{
name|mergeLocalToProto
argument_list|()
expr_stmt|;
name|proto
operator|=
name|viaProto
condition|?
name|proto
else|:
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
return|return
name|proto
return|;
block|}
annotation|@
name|Override
DECL|method|getQueueInfo ()
specifier|public
name|QueueInfo
name|getQueueInfo
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|queueInfo
operator|!=
literal|null
condition|)
block|{
return|return
name|this
operator|.
name|queueInfo
return|;
block|}
name|GetQueueInfoResponseProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
if|if
condition|(
operator|!
name|p
operator|.
name|hasQueueInfo
argument_list|()
condition|)
block|{
return|return
literal|null
return|;
block|}
name|this
operator|.
name|queueInfo
operator|=
name|convertFromProtoFormat
argument_list|(
name|p
operator|.
name|getQueueInfo
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|this
operator|.
name|queueInfo
return|;
block|}
annotation|@
name|Override
DECL|method|setQueueInfo (QueueInfo queueInfo)
specifier|public
name|void
name|setQueueInfo
parameter_list|(
name|QueueInfo
name|queueInfo
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|queueInfo
operator|==
literal|null
condition|)
block|{
name|builder
operator|.
name|clearQueueInfo
argument_list|()
expr_stmt|;
block|}
name|this
operator|.
name|queueInfo
operator|=
name|queueInfo
expr_stmt|;
block|}
DECL|method|mergeLocalToBuilder ()
specifier|private
name|void
name|mergeLocalToBuilder
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|queueInfo
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setQueueInfo
argument_list|(
name|convertToProtoFormat
argument_list|(
name|this
operator|.
name|queueInfo
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
DECL|method|mergeLocalToProto ()
specifier|private
name|void
name|mergeLocalToProto
parameter_list|()
block|{
if|if
condition|(
name|viaProto
condition|)
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|mergeLocalToBuilder
argument_list|()
expr_stmt|;
name|proto
operator|=
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|maybeInitBuilder ()
specifier|private
name|void
name|maybeInitBuilder
parameter_list|()
block|{
if|if
condition|(
name|viaProto
operator|||
name|builder
operator|==
literal|null
condition|)
block|{
name|builder
operator|=
name|GetQueueInfoResponseProto
operator|.
name|newBuilder
argument_list|(
name|proto
argument_list|)
expr_stmt|;
block|}
name|viaProto
operator|=
literal|false
expr_stmt|;
block|}
DECL|method|convertFromProtoFormat (QueueInfoProto queueInfo)
specifier|private
name|QueueInfo
name|convertFromProtoFormat
parameter_list|(
name|QueueInfoProto
name|queueInfo
parameter_list|)
block|{
return|return
operator|new
name|QueueInfoPBImpl
argument_list|(
name|queueInfo
argument_list|)
return|;
block|}
DECL|method|convertToProtoFormat (QueueInfo queueInfo)
specifier|private
name|QueueInfoProto
name|convertToProtoFormat
parameter_list|(
name|QueueInfo
name|queueInfo
parameter_list|)
block|{
return|return
operator|(
operator|(
name|QueueInfoPBImpl
operator|)
name|queueInfo
operator|)
operator|.
name|getProto
argument_list|()
return|;
block|}
block|}
end_class

end_unit

